--- a/DEV - Context, Prompts & Workflows/Prompts/documents/document_optimizer.yaml
+++ b/DEV - Context, Prompts & Workflows/Prompts/documents/document_optimizer.yaml
@@ -3,7 +3,7 @@
 # ─────────────────────────────────────────────────────────────────
 role: Documentation Optimizer
 purpose: Make documentation more concise and clearer without reducing clarity or changing meaning
-action: Optimize documentation files in target folders or standalone files
+action: Optimize documentation files in the target document (folder or file)
 
 operating_mode:
   workflow: sequential
@@ -45,7 +45,7 @@ user_inputs:
   git_branch: "[GIT_BRANCH]"
   environment: "[STAGING LINK]"
   scope: "[FILES]"
-  target_folder: "[TARGET_FOLDER]"  # Document or folder to optimize
+  target_document: "[TARGET_DOCUMENT]" 
   context: "[CONTEXT]"
   issues: "[ISSUES]"
   request: "[REQUEST]"
@@ -54,7 +54,7 @@ user_inputs:
 # REQUEST HANDLING
 # ─────────────────────────────────────────────────────────────────
 request_handling:
-  default: "Optimize documentation files in the target folder for conciseness and clarity"
+  default: "Optimize documentation files in the target document for conciseness and clarity"
   override: "Use [REQUEST] if provided (replaces default), else use default above"
 
 # ─────────────────────────────────────────────────────────────────
@@ -65,14 +65,14 @@ field_handling:
     git_branch_empty: "Auto-create feature-{NNN} from highest +001"
     environment_empty: "Skip browser testing steps"
     scope_empty: "Use scope_policy.default"
-    target_folder_empty: "Use current directory or infer from [REQUEST]"
+    target_document_empty: "Use current directory or infer from [REQUEST]"
     context_empty: "Infer from file content and structure"
     issues_empty: "Identify during analysis"
     request_empty: "Use default from request_handling"
 
   scope_policy:
     default: "**/*.md"
-    rule: "Process all .md files in target folder when folder provided, else process single file from [TARGET_FOLDER]"
+    rule: "Process all .md files in target document when folder provided, else process single file from [TARGET_DOCUMENT]"
 
 # ─────────────────────────────────────────────────────────────────
 # WORKFLOW
@@ -81,19 +81,19 @@ workflow:
   step_1_initialization:
     input_source: USER_INPUTS_SECTION_ABOVE
     git_branch: "[GIT_BRANCH] → use or create if empty"
-    target_folder: "[TARGET_FOLDER] → document or folder to optimize"
+    target_document: "[TARGET_DOCUMENT] → document or folder to optimize"
     context: "[CONTEXT] → infer if empty"
     issues: "[ISSUES] → identify during analysis"
     request: "Use [REQUEST] if provided, else use default from request_handling"
     action: Load documentation files and prepare for optimization
 
     file_discovery:
-      when_target_folder_provided:
-        - Load all .md files from [TARGET_FOLDER]
+      when_target_is_folder:
+        - Load all .md files from [TARGET_DOCUMENT]
         - Include subdirectories if present
         - Prioritize spec.md, plan.md, README.md
       when_target_is_file:
-        - Load single file from [TARGET_FOLDER]
+        - Load single file from [TARGET_DOCUMENT]
         - Process for optimization
 
     initial_assessment:
@@ -183,7 +183,7 @@ workflow:
 
   step_6_completion:
     summary_document:
-      location: "[TARGET_FOLDER]/optimization-summary.md"
+      location: "[TARGET_DOCUMENT]/optimization-summary.md"
       required_sections:
         - files_optimized
         - changes_made
