--- a/DEV - Context, Prompts & Workflows/Prompts/github_spec_kit/parallel_agents/sk_p__complete.yaml
+++ b/DEV - Context, Prompts & Workflows/Prompts/github_spec_kit/parallel_agents/sk_p__complete.yaml
@@ -37,9 +37,10 @@ field_handling:
     required: true
     type: enum
     options:
-      - feature_branch: "Create new feature branch (auto-create feature-{NNN} aligned with spec folder)"
-      - main_branch: "Work on main branch (skip branch creation and commit directly to main)"
-    note: "This decision is required at Step 1 and controls branch creation and final integration gates"
+      - main_temp: "Temporary worktree with short-lived branch (default). Work is isolated in .worktrees/{spec-id} on temp/{spec-id} branch, then merged back to main immediately after validation. Use for: 80% of work - normal features, bug fixes, improvements."
+      - feature_branch: "Long-running feature branch in worktree for PR review. Work stays in .worktrees/{spec-id} on feature-{spec-id} branch for team review before integration. Use for: 20% of work - complex features requiring multi-day development and code review."
+    default: main_temp
+    note: "This decision controls workspace isolation strategy and final integration gates. main_branch option removed (use main_temp for quick integration)."
 
   spec_id:
     derive_from: "spec_folder path using pattern specs/{NNN} or specs/{NNN-name}"
@@ -51,8 +52,8 @@ field_handling:
     condition: "Only used when branch_strategy == feature_branch"
 
   defaults:
-    branch_strategy_empty: "Prompt user at Step 1; cannot proceed without choice"
-    git_branch_empty: "If branch_strategy == feature_branch: use feature_branch_name; else: main"
+    branch_strategy_empty: "Default to main_temp (recommended for 80% of work)"
+    git_branch_empty: "Derived from worktree setup: temp/{spec-id} for main_temp, feature-{spec-id} for feature_branch"
     spec_folder_empty: "Auto-create specs/{NNN} from highest +001"
     context_empty: "Infer from [REQUEST] and [STAGING LINK]"
     issues_empty: "Investigate during workflow"
@@ -63,13 +64,41 @@ field_handling:
     default: "specs/**"
     rule: "Limit file operations to scope when provided"
 
-  branch_creation:
-    condition: "Only execute when branch_strategy == feature_branch"
-    steps:
-      - "Check if feature branch already exists"
-      - "Create feature-{spec_id} if not exists"
-      - "Checkout feature branch"
-    skip_when: "branch_strategy == main_branch"
+  note_on_branch_creation: "Worktree and branch creation handled by git-worktrees skill (see worktree_setup section below)"
+
+# ─────────────────────────────────────────────────────────────────
+# WORKTREE SETUP
+# ─────────────────────────────────────────────────────────────────
+worktree_setup:
+  trigger: after_step_1_input_gathering
+  invoke: git_worktrees_skill
+  description: |
+    Create isolated worktree for development using git-worktrees skill.
+    Worktree location: .worktrees/{spec-id}
+    Branch depends on strategy:
+      - main_temp: temp/{spec-id} (short-lived, merges back immediately)
+      - feature_branch: feature-{spec-id} (long-running, preserved for PR)
+
+  strategy: branch_strategy  # Derived from user input in step 1
+
+  inputs:
+    task_description: derived_from_request_field
+    branch_strategy: branch_strategy
+    spec_folder: spec_folder  # Used to derive worktree name
+    worktree_directory: auto_detect  # Priority: existing → AGENTS.md → ask user
+
+  outputs:
+    worktree_path: absolute_path_to_worktree  # e.g., /project/.worktrees/001
+    git_branch: active_branch_name  # e.g., temp/001 or feature-001
+    baseline_tests: pass_fail_status  # Tests passed at worktree creation
+
+  validation: worktree_ready_and_verified
+
+  note: |
+    All subsequent workflow steps execute within this worktree context.
+    All sub-agents in parallel stages run within the same worktree.
+    Dependencies auto-installed (npm/cargo/pip/go).
+    Environment verified clean before proceeding.
 
 # ─────────────────────────────────────────────────────────────────
 # SUB-AGENTS BY STAGE
@@ -160,24 +189,31 @@ workflow:
     branch_strategy_prompt:
       required: true
       question: |
-        Branch Strategy: Choose how you want to work with Git for this spec.
-        
-        Option A: Create new feature branch
-          - We will auto-create feature-{NNN} aligned with the spec folder
-          - Allows isolated development and testing
-          - Final step will offer to merge to main
-        
-        Option B: Work on main branch
-          - Skip branch creation and commit directly to main
-          - Faster for small changes or hotfixes
-          - No merge step at the end
-        
-        This decision is required before proceeding and will control later integration gates.
+        Select development isolation strategy:
+
+        Option A: main_temp (⭐ RECOMMENDED - default)
+          - Temporary worktree with short-lived branch
+          - Work isolated in .worktrees/{NNN} on temp/{NNN} branch
+          - Tested in isolation, then merged back to main immediately
+          - Branch and worktree deleted after successful integration
+          - Use for: 80% of work - normal features, bug fixes, improvements
+
+        Option B: feature_branch
+          - Long-running feature branch in worktree for PR review
+          - Work isolated in .worktrees/{NNN} on feature-{NNN} branch
+          - Branch preserved for team review before integration
+          - Worktree remains active for continued development
+          - Use for: 20% of work - complex features requiring multi-day development
+
+        This decision is required before proceeding and controls workspace isolation and final integration gates.
+
+        Note: main_branch option removed. Use main_temp for quick integration with isolation benefits.
       options:
+        - value: main_temp
+          label: "Temporary worktree (main_temp) - Recommended"
         - value: feature_branch
-          label: "Create new feature branch (feature-{NNN})"
-        - value: main_branch
-          label: "Work on main branch (no branching)"
+          label: "Feature branch for PR (feature_branch)"
+      default: main_temp
     branch_strategy: "[BRANCH_STRATEGY] → REQUIRED; cannot proceed without choice"
     git_branch: "[GIT_BRANCH] → derived from branch_strategy"
     spec_folder: "[SPEC_FOLDER] → auto-create if empty"
@@ -187,11 +223,9 @@ workflow:
     environment: "[STAGING LINK] → skip DevTools if empty"
     scope: "[FILES] → default scope if empty"
     action: |
-      1. Prompt user for branch_strategy (required)
-      2. Derive git_branch based on choice:
-         - If feature_branch: extract spec_id from spec_folder, create feature-{spec_id}
-         - If main_branch: use 'main'
-      3. Analyze user inputs and confirm understanding
+      1. Prompt user for branch_strategy (default: main_temp)
+      2. Analyze user inputs and confirm understanding
+      3. Prepare for worktree setup (next step will create isolated workspace)
     outputs:
       - branch_strategy_chosen
       - git_branch_resolved
@@ -201,7 +235,21 @@ workflow:
     validation: understanding_confirmed_and_branch_strategy_set
     approval_gate:
       type: USER_APPROVAL_REQUIRED
-      prompt: "Requirements analyzed. Branch strategy: {branch_strategy} on {git_branch}. Proceed to pre-work review?"
+      prompt: "Requirements analyzed. Branch strategy: {branch_strategy}. Workspace will be created at .worktrees/{spec-id}. Proceed to workspace setup?"
+      confirmation_needed: true
+
+  step_1_5_workspace_setup:
+    action: Create isolated worktree via git-worktrees skill
+    reference: worktree_setup section above defines complete setup process
+    validation: worktree_ready_and_verified
+    outputs:
+      - worktree_path_resolved
+      - git_branch_active
+      - baseline_tests_status
+    note: "All parallel sub-agents will execute within this worktree context"
+    approval_gate:
+      type: USER_APPROVAL_REQUIRED
+      prompt: "Workspace created at {worktree_path} on branch {git_branch}. Baseline tests: {baseline_tests}. Proceed to pre-work review?"
       confirmation_needed: true
 
   step_2_pre_work_review:
@@ -461,36 +509,114 @@ workflow:
       prompt: "Implementation summary complete. Approve to finalize workflow?"
       confirmation_needed: true
 
-  step_14_branch_integration:
-    name: Branch Integration Approval
-    condition: "Only execute if branch_strategy == feature_branch"
-    skip_when: "branch_strategy == main_branch"
-    skip_message: "Skipping branch integration (working on main branch)"
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      condition: "Only prompt if branch_strategy == feature_branch"
-      prompt: "All checks passed. Branch: {git_branch}. Would you like me to push this branch to main now to keep main up to date and minimize conflicts?"
-      confirmation_needed: true
-    integration_policy:
-      merge_strategy: rebase_then_fast_forward
-      safety_checks:
-        - clean working tree
-        - validations/tests/pass checks are green (as applicable for the workflow)
-        - no unresolved blockers
-      conflict_policy:
-        on_rebase_conflict: pause and ask for guidance
-        fallback_to_pr: offer to open a PR if user prefers manual resolution
-      steps:
-        - fetch origin
-        - update main (pull --ff-only)
-        - rebase feature branch onto main
-        - fast-forward merge into main
-        - push origin main
-        - after successful integration, offer to delete the feature branch locally and on origin (explicit confirmation required)
-      tagging: optional; only on user request
-    note: |
-      This step is automatically skipped when branch_strategy == main_branch.
-      If working on main, changes are already committed directly and no integration is needed.
+  step_14_integration_and_cleanup:
+    name: Integration & Cleanup
+    description: Integrate work and cleanup based on strategy
+
+    # ─────────────────────────────────────────────────────────────
+    # MAIN_TEMP STRATEGY (DEFAULT - 80% of work)
+    # ─────────────────────────────────────────────────────────────
+    condition_main_temp:
+      when: branch_strategy == main_temp
+      philosophy: "Temp branches are immediately merged and deleted. Worktree is ephemeral."
+
+      approval_gate:
+        type: USER_APPROVAL_REQUIRED
+        prompt: "All checks passed. Ready to integrate temp branch to main and cleanup? This will: (1) Merge temp/{spec-id} to main, (2) Delete temp branch, (3) Remove worktree .worktrees/{spec-id}."
+        confirmation_needed: true
+
+      integration_steps:
+        - action: verify_worktree_clean
+          command: "git status"
+          validation: no_uncommitted_changes
+
+        - action: return_to_main_repo
+          command: "cd ../.."
+          note: Leave worktree, return to main repository
+
+        - action: checkout_main_and_update
+          command: "git checkout main && git pull --ff-only"
+          validation: main_up_to_date
+
+        - action: merge_temp_branch
+          command: "git merge --ff-only temp/{spec-id}"
+          validation: fast_forward_successful
+          on_failure: |
+            If merge fails (not fast-forward):
+            - Likely main has diverged
+            - Offer to rebase: cd .worktrees/{spec-id} && git rebase main
+            - Then retry merge
+
+        - action: delete_temp_branch
+          command: "git branch -d temp/{spec-id}"
+          validation: branch_deleted
+
+        - action: remove_worktree
+          command: "git worktree remove .worktrees/{spec-id}"
+          validation: worktree_removed
+
+        - action: verify_integration
+          command: "git log --oneline -5"
+          validation: commits_on_main
+
+      success_criteria:
+        - changes_integrated_to_main: true
+        - temp_branch_deleted: true
+        - worktree_removed: true
+        - no_orphaned_references: true
+
+      final_message: |
+        ✓ Integration complete
+        ✓ Changes merged to main
+        ✓ Temp branch temp/{spec-id} deleted
+        ✓ Worktree .worktrees/{spec-id} removed
+        ✓ Main branch updated with your changes
+
+    # ─────────────────────────────────────────────────────────────
+    # FEATURE_BRANCH STRATEGY (EXCEPTION - 20% of work)
+    # ─────────────────────────────────────────────────────────────
+    condition_feature_branch:
+      when: branch_strategy == feature_branch
+      philosophy: "Long-running branches remain for PR workflow. Worktree preserved."
+
+      approval_gate:
+        type: USER_APPROVAL_REQUIRED
+        prompt: "Ready to push feature branch for PR? This will: (1) Push feature-{spec-id} to origin, (2) Preserve worktree for continued work. You'll need to create PR manually via GitHub/GitLab."
+        confirmation_needed: true
+
+      push_steps:
+        - action: verify_worktree_clean
+          command: "cd .worktrees/{spec-id} && git status"
+          validation: no_uncommitted_changes
+
+        - action: push_feature_branch
+          command: "git push -u origin feature-{spec-id}"
+          validation: branch_pushed_successfully
+
+        - action: preserve_worktree
+          note: Worktree remains at .worktrees/{spec-id} for continued development
+
+      manual_steps:
+        - "Create PR via GitHub/GitLab when ready"
+        - "Merge PR after code review"
+        - "Manual cleanup after PR merged: git worktree remove .worktrees/{spec-id}"
+
+      success_criteria:
+        - feature_branch_pushed: true
+        - worktree_preserved: true
+        - user_notified_of_next_steps: true
+
+      final_message: |
+        ✓ Feature branch pushed to origin
+        ✓ Branch: feature-{spec-id}
+        ✓ Worktree preserved at: .worktrees/{spec-id}
+        ✓ Next steps:
+          1. Create PR via GitHub/GitLab
+          2. Request code review
+          3. Merge PR after approval
+          4. Manual cleanup: git worktree remove .worktrees/{spec-id}
+
+    validation: integration_complete_per_strategy
 
 # ─────────────────────────────────────────────────────────────────
 # ADAPTIVE RULES & ERROR HANDLING
