--- a/DEV - Context, Prompts & Workflows/Prompts/github_spec_kit/sk__feature_research.yaml
+++ b/DEV - Context, Prompts & Workflows/Prompts/github_spec_kit/sk__feature_research.yaml
@@ -34,9 +34,10 @@ field_handling:
     required: true
     type: enum
     options:
-      - feature_branch: "Create new feature branch (auto-create feature-{NNN} aligned with spec folder)"
-      - main_branch: "Work on main branch (skip branch creation and commit directly to main)"
-    note: "This decision is required at Step 1 and controls branch creation"
+      - main_temp: "Temporary worktree with short-lived branch (default). Work is isolated in .worktrees/{spec-id} on temp/{spec-id} branch, then merged back to main immediately after validation. Use for: 80% of work - normal features, bug fixes, improvements."
+      - feature_branch: "Long-running feature branch in worktree for PR review. Work stays in .worktrees/{spec-id} on feature-{spec-id} branch for team review before integration. Use for: 20% of work - complex features requiring multi-day development and code review."
+    default: main_temp
+    note: "This decision controls workspace isolation strategy. main_branch option removed (use main_temp for quick integration)."
 
   spec_id:
     derive_from: "spec_folder path using pattern specs/{NNN} or specs/{NNN-name}"
@@ -48,8 +49,8 @@ field_handling:
     condition: "Only used when branch_strategy == feature_branch"
 
   defaults:
-    branch_strategy_empty: "Prompt user at Step 1; cannot proceed without choice"
-    git_branch_empty: "If branch_strategy == feature_branch: use feature_branch_name; else: main"
+    branch_strategy_empty: "Default to main_temp (recommended for 80% of work)"
+    git_branch_empty: "Derived from worktree setup: temp/{spec-id} for main_temp, feature-{spec-id} for feature_branch"
     spec_folder_empty: "Auto-create specs/{NNN} from highest +001"
     context_empty: "Infer from [REQUEST] and [STAGING LINK]"
     issues_empty: "Investigate during workflow"
@@ -60,13 +61,39 @@ field_handling:
     default: "specs/**"
     rule: "Limit file operations to scope when provided"
 
-  branch_creation:
-    condition: "Only execute when branch_strategy == feature_branch"
-    steps:
-      - "Check if feature branch already exists"
-      - "Create feature-{spec_id} if not exists"
-      - "Checkout feature branch"
-    skip_when: "branch_strategy == main_branch"
+  note_on_branch_creation: "Worktree and branch creation handled by git-worktrees skill (see worktree_setup section below)"
+
+# ─────────────────────────────────────────────────────────────────
+# WORKTREE SETUP
+# ─────────────────────────────────────────────────────────────────
+worktree_setup:
+  trigger: after_step_1_input_gathering
+  invoke: git_worktrees_skill
+  description: |
+    Create isolated worktree for research using git-worktrees skill.
+    Worktree location: .worktrees/{spec-id}
+    Branch depends on strategy:
+      - main_temp: temp/{spec-id} (short-lived, merges back immediately)
+      - feature_branch: feature-{spec-id} (long-running, preserved for implementation)
+
+  strategy: branch_strategy  # Derived from user input in step 1
+
+  inputs:
+    task_description: derived_from_request_field
+    branch_strategy: branch_strategy
+    spec_folder: spec_folder  # Used to derive worktree name
+    worktree_directory: auto_detect  # Priority: existing → AGENTS.md → ask user
+
+  outputs:
+    worktree_path: absolute_path_to_worktree  # e.g., /project/.worktrees/001
+    git_branch: active_branch_name  # e.g., temp/001 or feature-001
+    baseline_tests: pass_fail_status  # Tests passed at worktree creation
+
+  validation: worktree_ready_and_verified
+
+  note: |
+    All subsequent research steps execute within this worktree context.
+    Research artifacts created in isolated workspace.
 
 # ─────────────────────────────────────────────────────────────────
 # WORKFLOW
@@ -99,6 +126,15 @@ workflow:
         - technical_depth_required
         - output_structure_planning
     validation: scope_defined
+
+  step_1_5_workspace_setup:
+    action: Create isolated worktree via git-worktrees skill
+    reference: worktree_setup section above defines complete setup process
+    validation: worktree_ready_and_verified
+    outputs:
+      - worktree_path_resolved
+      - git_branch_active
+      - baseline_tests_status
 
   step_2_pre_work_review:
     required_documents:
@@ -345,29 +381,60 @@ workflow:
         - Proceed to specification (/specify) if needed
         - Use research as reference during implementation planning
 
-  step_9_branch_integration:
-    name: Branch Integration Approval
-    approval_gate:
-      type: USER_APPROVAL_REQUIRED
-      prompt: "All checks passed. Would you like me to push this branch to main now to keep main up to date and minimize conflicts?"
-      confirmation_needed: true
-    integration_policy:
-      merge_strategy: rebase_then_fast_forward
-      safety_checks:
-        - clean working tree
-        - validations/tests/pass checks are green (as applicable for the workflow)
-        - no unresolved blockers
-      conflict_policy:
-        on_rebase_conflict: pause and ask for guidance
-        fallback_to_pr: offer to open a PR if user prefers manual resolution
-      steps:
-        - fetch origin
-        - update main (pull --ff-only)
-        - rebase feature branch onto main
-        - fast-forward merge into main
-        - push origin main
-        - after successful integration, offer to delete the feature branch locally and on origin (explicit confirmation required)
-      tagging: optional; only on user request
+  step_9_integration_and_cleanup:
+    name: Integration & Cleanup
+    description: Integrate research docs and cleanup based on strategy
+
+    condition_main_temp:
+      when: branch_strategy == main_temp
+      philosophy: "Temp branches are immediately merged and deleted. Worktree is ephemeral."
+      approval_gate:
+        type: USER_APPROVAL_REQUIRED
+        prompt: "Research complete. Ready to integrate to main and cleanup? This will: (1) Merge temp/{spec-id} to main, (2) Delete temp branch, (3) Remove worktree."
+        confirmation_needed: true
+      integration_steps:
+        - action: verify_worktree_clean
+          validation: no_uncommitted_changes
+        - action: return_to_main_repo
+        - action: checkout_main_and_update
+          validation: main_up_to_date
+        - action: merge_temp_branch
+          command: "git merge --ff-only temp/{spec-id}"
+          validation: fast_forward_successful
+        - action: delete_temp_branch
+          validation: branch_deleted
+        - action: remove_worktree
+          validation: worktree_removed
+      success_criteria:
+        - changes_integrated_to_main: true
+        - temp_branch_deleted: true
+        - worktree_removed: true
+      final_message: |
+        ✓ Research integrated to main
+        ✓ Temp branch deleted
+        ✓ Worktree removed
+
+    condition_feature_branch:
+      when: branch_strategy == feature_branch
+      philosophy: "Long-running branches remain for continued work. Worktree preserved."
+      approval_gate:
+        type: USER_APPROVAL_REQUIRED
+        prompt: "Ready to push feature branch? Worktree will be preserved for continued work."
+        confirmation_needed: true
+      push_steps:
+        - action: verify_worktree_clean
+        - action: push_feature_branch
+          command: "git push -u origin feature-{spec-id}"
+        - action: preserve_worktree
+      success_criteria:
+        - feature_branch_pushed: true
+        - worktree_preserved: true
+      final_message: |
+        ✓ Feature branch pushed
+        ✓ Worktree preserved at .worktrees/{spec-id}
+        ✓ Ready for continued development
+
+    validation: integration_complete_per_strategy
 
 # ─────────────────────────────────────────────────────────────────
 # QUALITY STANDARDS
