--- a/Writer - Product Owner/Prompts/agent_system_updater.yaml
+++ b/Writer - Product Owner/Prompts/agent_system_updater.yaml
@@ -15,8 +15,8 @@ operating_mode:
 # WORKFLOW
 # ───────────────────────────────────────────────────────────────
 user_inputs:
-  context: "Knowledge Base Improvement"
-  request: "Implement this plan: /Users/michelkerkmeester/MEGA/AI Systems/Writer - Product Owner/Context/AI System/Knowledge_Base_Improvement_Plan.md"
+  context: "Analyze all files here: /Users/michelkerkmeester/MEGA/AI Systems/Writer - Product Owner/Knowledge Base"
+  request: "Remove all ‘Priority’ and ‘Timeline’ logic from all templates and knowledge base files"
   constraints:
     - All file modifications require explicit approval
     - Zero regression tolerance unless approved
